# long-exposure

./: .gitignore  README.md  pyproject.toml  run_final_reporter.py
auto_compact/: cli.py  compact.py  db.py  proximity.py
docs/: INDEX.md  architecture-overview.md  codex-implementation-notes.md  codex-integration-plan.md  codex-plan-review.md  codex-stage-1-audit.md  configuration-reference.md  end-of-run-pipeline.md  figures.md  gaps.md  gaps_interactive_mode.md  gemini-integration-plan.md  gemini-plan-review.md  gemini-stage-1-audit.md  google-cloud-open-source-llm-costs.md  local-setup.md  multi-account-pool.md  parallelism.md  persistence-and-gems.md  soft-guidance.md  telemetry.md  usage-guide.md  workspace-conventions.md
long_exposure/: agent_routing.py  anti_patterns.py  auditing.py  branchial.py  branchial_budget.py  cli.py  conductor.py  config.yaml  curator.py  exploration-score.yaml  exploration.py  fanout.py  health_events.py  interactive_bridge.py  interactive_pretool_hook.py  interactive_stop_hook.py  interactive_transport.py  lemmas.py  limits.py  manager.py  mcp_search_server.py  orchestrator.py  paths.py  pool.py  provider.py  report_formatting.py  reporting.py  telemetry.py  unified_pool.py  workspace_bootstrap.py
long_exposure/templates/: framework-template.md  philosophy-template.md  (+4 more)
tests/: test_agent_routing.py  test_anti_patterns.py  test_auto_compact_fixes.py  test_branchial.py  test_branchial_budget.py  test_cli_commands.py  test_clone_termination.py  test_codex_fanout_sessions.py  test_codex_provider.py  test_config_validation.py  test_curator_recovery.py  test_cycle_loop_integration.py  test_fanout_conductor.py  test_fanout_parser.py  test_final_auditor_lessons.py  test_final_pipeline_gates.py  test_gemini_provider.py  test_interactive_agent_sessions.py  test_interactive_transport.py  test_ledger_append.py  test_ledger_graph.py  test_lemmas.py  test_local_provider.py  test_manager.py  test_mcp_search_server.py  test_orchestrator_fixes.py  test_output_block_recovery.py  test_pool.py  test_promise_check_exceptions.py  test_provider_watchdog.py  test_proximity_ruliad.py  test_report_formatting.py  test_resume_state.py  test_setup_env.py  test_telemetry.py  test_unified_pool.py  test_workspace_routing.py
(+11 files in other folders)
